--- a/frontend/blog_generator/package.json
+++ b/frontend/blog_generator/package.json
@@ -1,25 +1,37 @@
 {
   "name": "blog_generator",
   "version": "1.0.0",
-  "description": "Nuxt.js project",
+  "description": "Nuxt.js + Vuetify.js project",
   "author": "n4oah <n4oahdev@gmail.com>",
   "private": true,
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.2.0",
+    "vue-property-decorator": "^8.2.1",
+    "vuetify": "^2.0.1"
   },
   "devDependencies": {
+    "@nuxt/typescript-build": "^0.1.11",
+    "@nuxtjs/eslint-config-typescript": "^0.1.2",
     "babel-eslint": "^10.0.1",
-    "eslint": "^4.19.1",
-    "eslint-friendly-formatter": "^4.0.1",
+    "css-loader": "^3.2.0",
+    "eslint": "^5.7.0",
+    "eslint-config-standard": "^12.0.0",
     "eslint-loader": "^2.1.1",
-    "eslint-plugin-vue": "^4.0.0"
+    "eslint-plugin-html": "^4.0.6",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "sass": "^1.22.10",
+    "sass-loader": "^7.3.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "vue-class-component": "^7.1.0"
   }
 }
