--- a/frontend/blog_generator/package.json
+++ b/frontend/blog_generator/package.json
@@ -12,14 +12,10 @@
   },
   "dependencies": {
     "nuxt": "^2.2.0",
-    "vue-property-decorator": "^8.2.1",
-    "vuetify": "^2.0.1"
+    "vuetify": "^1.3.6"
   },
   "devDependencies": {
-    "@nuxt/typescript-build": "^0.1.11",
-    "@nuxtjs/eslint-config-typescript": "^0.1.2",
     "babel-eslint": "^10.0.1",
-    "css-loader": "^3.2.0",
     "eslint": "^5.7.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-loader": "^2.1.1",
@@ -28,10 +24,7 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "sass": "^1.22.10",
-    "sass-loader": "^7.3.1",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
-    "vue-class-component": "^7.1.0"
+    "stylus-loader": "^3.0.2"
   }
 }
