--- a/frontend/blog_generator/package.json
+++ b/frontend/blog_generator/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "nuxt": "^2.2.0",
+    "vue-property-decorator": "^8.2.1",
     "vuetify": "^1.3.6"
   },
   "devDependencies": {
+    "@nuxt/typescript-build": "^0.1.11",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.7.0",
     "eslint-config-standard": "^12.0.0",
@@ -25,6 +27,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2"
+    "stylus-loader": "^3.0.2",
+    "vue-class-component": "^7.1.0"
   }
 }
