--- a/frontend/blog_generator/package.json
+++ b/frontend/blog_generator/package.json
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.1.11",
+    "@nuxtjs/eslint-config-typescript": "^0.1.2",
+    "@typescript-eslint/parser": "^2.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.7.0",
     "eslint-config-standard": "^12.0.0",
