--- a/frontend/blog_generator/package.json
+++ b/frontend/blog_generator/package.json
@@ -11,6 +11,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.6.0",
     "nuxt": "^2.2.0",
     "vue-property-decorator": "^8.2.1",
     "vuetify": "^1.3.6"
