product dev에 대하여 env 환경변수 분리

--- a/frontend/blog_generator/tsconfig.json
+++ b/frontend/blog_generator/tsconfig.json
@@ -26,7 +26,9 @@
     "types": [
       "@types/node",
       "@nuxt/types",
-      "vuetify"
+      "vuetify",
+      "@nuxtjs/axios",
+      "cookie-universal-nuxt"
     ]
   },
   "exclude": [
