--- a/frontend/blog_generator/package.json
+++ b/frontend/blog_generator/package.json
@@ -5,19 +5,21 @@
   "author": "n4oah <n4oahdev@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
+    "dev": "set NODE_ENV=development && nuxt",
+    "build": "set NODE_ENV=production && nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "set NODE_ENV=production && nuxt generate"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.6.0",
+    "cookie-universal-nuxt": "^2.0.18",
     "nuxt": "^2.2.0",
     "vue-property-decorator": "^8.2.1",
     "vuetify": "^1.3.6"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.1.11",
+    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/eslint-config-typescript": "^0.1.2",
     "@typescript-eslint/parser": "^2.0.0",
     "babel-eslint": "^10.0.1",
