--- a/backend/blog_generator/src/main/resources/application.yml
+++ b/backend/blog_generator/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
         temp:
           use_jdbc_metadata_defaults: false
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
   datasource:
     hikari:
       maximum-pool-size: 5
