--- a/frontend_react/blog_generator/package.json
+++ b/frontend_react/blog_generator/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "next",
+    "dev": "NODE_ENV=development && next",
     "build": "next build",
     "start": "next start"
   },
