--- a/frontend_react/blog_generator/package.json
+++ b/frontend_react/blog_generator/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development && next",
+    "dev": "next",
     "build": "next build",
     "start": "next start"
   },
@@ -12,8 +12,12 @@
     "@material-ui/core": "^4.7.0",
     "@material-ui/icons": "^4.5.1",
     "@zeit/next-less": "^1.0.1",
+    "axios": "^0.19.0",
+    "dotenv-load": "^2.0.0",
     "less": "^3.10.3",
     "next": "^9.1.4",
+    "next-compose-plugins": "^2.2.0",
+    "next-env": "^1.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
