--- a/frontend_react/blog_generator/tsconfig.json
+++ b/frontend_react/blog_generator/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "esnext",
     "jsx": "preserve",
     "sourceMap": true,
-    "outDir": "./dist",
+    "outDir": "dist",
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
@@ -18,7 +18,13 @@
     "noEmit": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "baseUrl": ".",
+    "paths": {
+      "@src/*": ["src/*"],
+      "@components/*": ["src/components/*"],
+      "@public": ["public/*"]
+    },
   },
   "exclude": [
     "node_modules"
