--- a/frontend_react/blog_generator/package.json
+++ b/frontend_react/blog_generator/package.json
@@ -13,21 +13,22 @@
     "@material-ui/icons": "^4.5.1",
     "@zeit/next-less": "^1.0.1",
     "axios": "^0.19.0",
-    "dotenv-load": "^2.0.0",
+    "dotenv": "^8.2.0",
     "less": "^3.10.3",
     "next": "^9.1.4",
     "next-compose-plugins": "^2.2.0",
-    "next-env": "^1.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.7.5",
     "@types/node": "^12.12.14",
     "@types/react": "^16.9.13",
     "@types/react-redux": "^7.1.5",
     "@zeit/next-typescript": "^1.1.1",
+    "dotenv-webpack": "^1.7.0",
     "typescript": "^3.7.2"
   }
 }
