이미지 파일 import 가능하도록 plugin 추가

--- a/frontend_react/blog_generator/tsconfig.json
+++ b/frontend_react/blog_generator/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "compilerOptions": {
+    /*
+    "typeRoots": [
+      "./node_modules/@types"
+    ],
+    */
     "target": "es2017",
     "module": "esnext",
     "jsx": "preserve",
@@ -38,6 +43,7 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "**/*.png"
   ]
 }
