--- a/frontend_react/blog_generator/package.json
+++ b/frontend_react/blog_generator/package.json
@@ -13,14 +13,17 @@
     "@material-ui/icons": "^4.5.1",
     "@zeit/next-less": "^1.0.1",
     "axios": "^0.19.0",
+    "babel-plugin-file-loader": "^2.0.0",
     "dotenv": "^8.2.0",
     "less": "^3.10.3",
     "next": "^9.1.4",
     "next-compose-plugins": "^2.2.0",
     "react": "^16.12.0",
+    "react-cookie": "^4.0.1",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "url-loader": "^3.0.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.7.5",
