--- a/backend/blog_generator/src/main/resources/application.yml
+++ b/backend/blog_generator/src/main/resources/application.yml
@@ -18,9 +18,10 @@ spring:
     username: blog
     password: blog123
   devtools:
+    livereload:
+      enable: true
     restart:
-      enabled: true
-      include: src/main/kotlin/**
+      enable: true
 google:
   client:
     client-id: 1022382027832-et8dt0tda0nn0ff0471lafk62agcign6.apps.googleusercontent.com
