--- a/frontend_react/blog_generator/package.json
+++ b/frontend_react/blog_generator/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "url-loader": "^3.0.0"
   },
   "devDependencies": {
